# blazing-fast-url-shortner

./: .gitignore  Cargo.toml  README.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
src/: config.rs  main.rs
src/handlers/: mod.rs  url_handler.rs
src/middleware/: mod.rs  url_validator.rs
src/repositories/: mod.rs  url_repository.rs
src/services/: encryption_service.rs  mod.rs  url_service.rs
