[package]
name = "blazing-fast-url-shortner"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.5", features = ["macros"] }
actix-cors = "0.6.4"
sled = "0.34"
nanoid = "0.4"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ring = "0.17.7"
base64 = "0.21.7"
